First landing prototype done

--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Richard Le</title>
+	<title>Richard Le:  Home</title>
+	<!-- FONTS -->
+	<link rel="stylesheet" type="text/css" href="css/fonts/VCR OSD Mono/stylesheet.css">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+	<!-- BOOTSTRAP -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
-	<div id="background"></div>
+	<div id="background">
+	</div>
+	<div id="ui-overlay-container" class="container-fluid">
+		<div class="row">
+			<div id="top-banner" class="d-sm-none d-md-block col-lg-11 text-center mx-auto  mt-5">
+				<span id="rl-logo" class="display-4 text-center">I AM RICHARD LE</span>
+			</div>
+			<div></div>
+		</div>
+		<div class="row">
+			<div class="mx-auto col-sm-4 text-center my-1">
+				<h4 id="prof-label">SOFTWARE DEVELOPER</h4>
+			</div>
+		</div>
+<!-- 		<div class="row">
+			<div class="text-center col-2 mx-1 ml-auto">GITHUB</div>
+			<div class="text-center col-2 mx-1">LINKEDIN</div>
+			<div class=" text-center col-2 mx-1 mr-auto">EMAIL</div>
+		</div> -->
+	</div>
+
+	<div id="horiz-scroll-div" class="text-center mx-auto">
+		<div id="nav-container">
+			<span id="projects-nav" class="subject-nav mx-2">PROJECTS</span>
+			<br>
+			<span id="resume-nav" class="subject-nav mx-2">RESUMÉ</span>
+		</div>	
+	</div>
+
+
+
+
+
+
+
+	<!-- JQUERY -->
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <!-- BOOTSTRAP DEPENDENCIES -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<!-- BAFFLE.JS -->
+	<script type="text/javascript" src="js/baffle.min.js"></script>
+	<!-- CUSTOM -->
+	<script type="text/javascript" src="js/landing.js"></script>
 </body>
 </html>
