Sexy as hell swipe down to resume implemented

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	<!-- BOOTSTRAP -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- FONTAWESOME ICONS -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
@@ -15,30 +17,39 @@
 	</div>
 	<div id="ui-overlay-container" class="container-fluid">
 		<div class="row">
-			<div id="top-banner" class="d-sm-none d-md-block col-lg-11 text-center mx-auto  mt-5">
-				<span id="rl-logo" class="display-4 text-center">I AM RICHARD LE</span>
+			<div id="top-banner" class=" col-lg-11 text-center mx-auto  mt-5">
+				<span id="rl-logo" class="display-4 text-center d-none d-md-block">I AM RICHARD LE</span>
+				<span class="display-4 d-md-none d-sm-block">RICHARD LE</span>
 			</div>
-			<div></div>
 		</div>
 		<div class="row">
-			<div class="mx-auto col-sm-4 text-center my-1">
+			<div class="mx-auto col-sm-6 text-center my-1">
 				<h4 id="prof-label">SOFTWARE DEVELOPER</h4>
 			</div>
 		</div>
-<!-- 		<div class="row">
-			<div class="text-center col-2 mx-1 ml-auto">GITHUB</div>
-			<div class="text-center col-2 mx-1">LINKEDIN</div>
-			<div class=" text-center col-2 mx-1 mr-auto">EMAIL</div>
-		</div> -->
+
+		<div id="horiz-scroll-div" class="text-center mx-auto">
+			<div id="nav-container">
+				<span id="projects-nav" class="subject-nav mx-2">PROJECTS</span>
+				<br>
+				<span id="resume-nav" class="subject-nav mx-2">RESUMÉ</span>
+			</div>	
+		</div>
+	</div>
+	<div id="resume-container" class="container-fluid text-center">
+		<div class="row">
+			<div id="up-arrow" class="col-3 mb-4 text-center mx-auto">
+				<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+				width="52" height="52"
+				viewBox="0 0 192 192"
+				style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#ffffff"><g id="surface1"><path d="M36.92308,83.45192c20.68269,-31.00961 53.16346,-59.07692 54.63462,-59.82692c0.75,-0.72115 2.97115,-1.47116 4.4423,-1.47116c1.47116,0 3.69231,0.75 5.16346,1.47116c1.47116,0.75 33.98077,29.53846 54.66346,59.82692c1.47115,2.22116 1.47115,5.16346 0.72115,8.10577c-1.47116,2.22115 -3.69231,4.4423 -6.63462,4.4423h-27.3173c0,0 -3.69231,64.24039 -5.91347,67.21154c-3.69231,3.69231 -12.54807,6.63461 -20.68269,6.63461c-8.13461,0 -16.24039,-2.9423 -19.21153,-6.63461c-1.47116,-2.97116 -6.63462,-67.21154 -6.63462,-67.21154h-27.31731c-2.97115,0 -5.16346,-1.47116 -6.66346,-4.4423c-1.47116,-2.19231 -0.72116,-5.16346 0.75,-8.10577z"></path></g></g></g></svg>
+			</div>
+		</div>
+		
+		<iframe src="https://drive.google.com/viewerng/viewer?url=css/pdf/resume.pdf&embedded=true" width="95%" height="95%" frameborder="0"></iframe>
 	</div>
 
-	<div id="horiz-scroll-div" class="text-center mx-auto">
-		<div id="nav-container">
-			<span id="projects-nav" class="subject-nav mx-2">PROJECTS</span>
-			<br>
-			<span id="resume-nav" class="subject-nav mx-2">RESUMÉ</span>
-		</div>	
-	</div>
+	
 
 
 
@@ -48,10 +59,10 @@
 
 	<!-- JQUERY -->
 	<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-  <!-- BOOTSTRAP DEPENDENCIES -->
+	src="https://code.jquery.com/jquery-3.4.1.min.js"
+	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+	crossorigin="anonymous"></script>
+	<!-- BOOTSTRAP DEPENDENCIES -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<!-- BAFFLE.JS -->
