Beginning work on projects page, small tweaks to UI of navigation

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
 		<div id="horiz-scroll-div" class="text-center mx-auto">
 			<div id="nav-container">
-				<span id="projects-nav" class="subject-nav mx-2">PROJECTS</span>
+				<a id="projects-nav" class="subject-nav mx-2" href="/projects">PROJECTS</a>
 				<br>
 				<span id="resume-nav" class="subject-nav mx-2">RESUMÉ</span>
 			</div>	
 		</div>
 	</div>
-	<div id="resume-container" class="container-fluid text-center">
+	<div id="resume-container" class="container-fluid text-center mt-3">
 		<div class="row">
 			<div id="up-arrow" class="col-3 mb-4 text-center mx-auto">
 				<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		
-		<iframe src="https://drive.google.com/viewerng/viewer?url=css/pdf/resume.pdf&embedded=true" width="95%" height="95%" frameborder="0"></iframe>
+		<iframe id="resume-frame" src="https://drive.google.com/viewerng/viewer?url=css/pdf/resume.pdf&embedded=true" width="95%" height="95%" frameborder="0"></iframe>
 	</div>
 
 	
