Adjusted repsonsiveness and fixed interaction issue on main, working on responsiveness and layout of projects

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
-<body>
-	<div id="background">
+<body style="overflow: hidden;">
+	<div id="homepage-container">
+		<div id="background">
 	</div>
 	<div id="ui-overlay-container" class="container-fluid">
 		<div class="row">
@@ -51,6 +52,8 @@
 
 	
 
+	</div>
+	
 
 
 
