--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
 	<!-- FONTS -->
 	<link rel="stylesheet" type="text/css" href="css/fonts/VCR OSD Mono/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/fonts/FreeSans/stylesheet.css">
 	<!-- BOOTSTRAP -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- FONTAWESOME ICONS -->
@@ -14,7 +15,58 @@
 </head>
 <body>
 	<div id="projects-background"></div>
-	<h3>Projects</h3>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-3 display-1">
+				PROJECTS
+			</div>
+		</div>
+		<div class="row text-center mt-3">
+			<div class="col-3 display-4 project-category">GAME DEV</div>
+			<div class="col-3 display-4 project-category">WEB</div>
+			<div class="col-3 display-4 project-category">SOFTWARE</div>
+			<div class="col-3 display-4 project-category">OTHER</div>
+		</div>
+		<div class="row mt-5">
+			<div class="col-6 container-fluid">
+				<div class="row">
+					<div class="col-5 text-right ml-auto">
+						<video  height="500px" autoplay loop>
+							<source src="css/vid/mosh3.webm" type="video/webm">
+						</video>
+					</div>
+					<div class="col-3 mr-auto text-left">
+						<ul class="mr-auto">
+							<img class="my-2" src="https://via.placeholder.com/150">
+							<img class="my-2" src="https://via.placeholder.com/150">
+							<img class="my-2" src="https://via.placeholder.com/150">
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-6 container-fluid">
+				<div class="row">
+					<div class="col-12">TITLE</div>
+				</div>
+				<div class="row">
+					<div class="col-8" >
+						<p id="project-description">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam varius mollis consequat. Integer ornare eu lorem id pellentesque. Praesent fringilla odio ante, non auctor augue vulputate eu. Praesent cursus ante mauris, id sollicitudin ligula commodo id. Phasellus enim odio, elementum vel sem quis, scelerisque efficitur leo. Etiam accumsan ante quis ligula lobortis lacinia. Nulla hendrerit tincidunt mi, ut imperdiet dui fringilla ac. Donec vel purus in purus rutrum tincidunt ut elementum turpis. Duis in malesuada nisl. Maecenas iaculis ex sed lectus commodo, ac scelerisque eros blandit. Nam ornare dolor at sem imperdiet maximus. Ut dapibus sollicitudin dolor, vel fringilla nibh interdum quis. Suspendisse dui arcu, pretium eu elit ac, feugiat hendrerit nisi.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row mt-5">
+			<div class="col-8 mx-auto text-center mt-5">
+				<div id="bottom-bar" class="h-bar">
+					<div class="project-dot"></div>
+					<div class="project-dot"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
