--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="ui-overlay-container" class="container-fluid">
 		<div class="row">
 			<div id="top-banner" class=" col-lg-11 text-center mx-auto  mt-5">
-				<span id="rl-logo" class="display-4 text-center d-none d-md-block">I AM RICHARD LE</span>
+				<span id="rl-logo" class="display-4 text-center d-none d-md-block">RICHARD LE</span>
 				<span class="display-4 d-md-none d-sm-block">RICHARD LE</span>
 			</div>
 		</div>
@@ -27,6 +27,11 @@
 			<div class="mx-auto col-sm-6 text-center my-1">
 				<h4 id="prof-label">SOFTWARE DEVELOPER</h4>
 			</div>
+		</div>
+		<div id="contact-row" class="row text-center">
+			<a href="https://github.com/le-rich" class="col-lg-1 col-sm-3 contact-link ml-auto">GITHUB</a>
+			<a href="https://www.linkedin.com/in/le-rich/" class="col-lg-1 col-sm-3 contact-link">LINKEDIN</a>
+			<a href="mailto:richardle1997@gmail.com" class="col-lg-1 col-sm-3 contact-link mr-auto">EMAIL</a>
 		</div>
 
 		<div id="horiz-scroll-div" class="text-center mx-auto">
@@ -36,6 +41,7 @@
 				<span id="resume-nav" class="subject-nav mx-2">RESUMÉ</span>
 			</div>	
 		</div>
+		
 	</div>
 	<div id="resume-container" class="container-fluid text-center mt-3">
 		<div class="row">
