--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 				PROJECTS
 			</div>
 		</div>
-		<div class="row text-center mt-3">
+		<div class="row text-center my-3">
 			<div class="col-3 display-4 project-category">GAME DEV</div>
 			<div class="col-3 display-4 project-category">WEB</div>
 			<div class="col-3 display-4 project-category">SOFTWARE</div>
@@ -61,8 +61,7 @@
 		<div class="row mt-5">
 			<div class="col-8 mx-auto text-center mt-5">
 				<div id="bottom-bar" class="h-bar">
-					<div class="project-dot"></div>
-					<div class="project-dot"></div>
+					<div id="project-highlighter"></div>
 				</div>
 			</div>
 		</div>
@@ -83,6 +82,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<!-- BAFFLE.JS -->
 	<script type="text/javascript" src="js/baffle.min.js"></script>
+	<!-- TILT.JS -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
 	<!-- CUSTOM -->
 	<script type="text/javascript" src="js/projects.js"></script>
 </body>
