--- a/projects.html
+++ b/projects.html
@@ -29,108 +29,74 @@
 		<div class="col-3 project-category">OTHER</div>
 	</div>
 	<div id="game-dev-projects" class="container-fluid">
-		<div class="row mt-5 project-row">
-			<div class="col-6 container-fluid">
+		<div id="project-midnight" class="row mt-5 project-row">
+			<div class="col-md-6 col-sm-12 container-fluid">
 				<div class="row text-center">
 					<div class="col-12 text-center mx-auto">
 						<video width="100%" autoplay loop>
 							<source src="css/vid/classified.mp4" type="video/mp4">
-							</video>
-						</div>
-					</div>
-					<div class="row mt-3">
-						<div class="col-6">
-							<video width="100%" autoplay loop>
-								<source src="css/vid/zoomzoom.mp4" type="video/mp4">
-								</video>
-							</div>
-							<div class="col-6">
-								<video width="100%" autoplay loop>
-									<source src="css/vid/pewpew.mp4" type="video/mp4">
-									</video>
-								</div>
-							</div>
-						</div>
-						<div class="col-6 description-container container-fluid">
-							<div class="row">
-								<div class="col-12">
-									<h1 style="font-family: 'FreeSansOblique';">MIDNIGHT CROWN</h1>
-									<h5>STATUS: HIATUS</h5>
-									<h5>TIMEFRAME: 1 YEAR</h5>
-									<h5>DEC 2017 - JAN 2018</h5>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-6" >
-									<p id="project-description" class="text-left">A WIP 'aerospace' combat game with full flight and combat controls both in atmosphere and zero-g. A passion project I have been working on as the sole developer.</p>
-									<br>
-									<h5>FEATURES</h5>
-									<ul>
-										<li>Full 4 degree of freedom movement</li>
-										<li>Capital and fighter AI with behaviour trees and local avoidance</li>
-										<li>Diagetic cockpits linked with ship subcomponents</li>
-										<li>Trajectory prediction and aim assist for kinetic weapons</li>
-										<li>Missiles with predictive guidance</li>
-										<li>and much more...</li>
-									</ul>
-
-									<p>Postponed for restructuring and iteration.</p>
-
-									<br>
-									<h5>BUILT WITH: Unity, C#, Blender, FMODStudio, Adobe Suite</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row mt-5 project-row">
-						<div class="col-6 container-fluid">
-							<div class="row">
-								<div class="col-9 text-right mx-auto">
-						<!-- <video  height="500px" autoplay loop>
-							<source src="css/vid/mosh3.webm" type="video/webm">
-							</video> -->
-							<img width="100%" height="auto" src="css/img/ecocity/bg-masthead.jpg">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-9 mx-auto my-2 text-center d-flex justify-content-around">
-							<img data-tilt src="https://via.placeholder.com/150">
-							<img data-tilt src="https://via.placeholder.com/150">
-							<img data-tilt src="https://via.placeholder.com/150">
-						</div>
+						</video>
 					</div>
 				</div>
-				<div class="col-6 description-container container-fluid">
-					<div class="row">
-						<div class="col-12">
-							<h1>ECOCITY THE GAME</h1>
-							<h5>STATUS: COMPLETE - 5 WEEKS</h5>
-							<h5>APRIL 2019 - MAY 2019</h5>
-						</div>
+				<div class="row mt-3">
+					<div class="col-6">
+						<video width="100%" autoplay loop>
+							<source src="css/vid/zoomzoom.mp4" type="video/mp4">
+						</video>
 					</div>
-					<div class="row">
-						<div class="col-6" >
-							<p id="project-description">
-								An environmentally minded city building game. Balance economy and ecology to build the perfect ecocity.
-							</p>
-						</div>
+					<div class="col-6">
+						<video width="100%" autoplay loop>
+							<source src="css/vid/pewpew.mp4" type="video/mp4">
+						</video>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-sm-12 description-container container-fluid  text-sm-center text-md-left">
+				<div class="row">
+					<div class="col-12">
+						<h1 style="font-family: 'FreeSansOblique';">MIDNIGHT CROWN</h1>
+						<h5>STATUS: HIATUS</h5>
+						<h5>TIMEFRAME: 1 YEAR</h5>
+						<h5>DEC 2017 - JAN 2018</h5>
+					</div>
+				</div>
+				<div class="row">
+					<div id="project-description" class="col-6" >
+						<br>
+						<p class="text-left">A WIP 'aerospace' combat game with full flight and combat controls both in atmosphere and zero-g. A passion project I have been working on as the sole developer.</p>
+						<br>
+						<h5>FEATURES</h5>
+						<ul>
+							<li>Full 4 degree of freedom movement</li>
+							<li>Capital and fighter AI with behaviour trees and local avoidance</li>
+							<li>Diagetic cockpits linked with ship subcomponents</li>
+							<li>Trajectory prediction and aim assist for kinetic weapons</li>
+							<li>Missiles with predictive guidance</li>
+							<li>and much more...</li>
+						</ul>
+
+						<p>Postponed for restructuring and iteration.</p>
+
+						<br>
+						<h5>BUILT WITH: Unity, C#, Blender, FMODStudio, Adobe Suite</h5>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- JQUERY -->
-		<script
-		src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-		crossorigin="anonymous"></script>
-		<!-- BOOTSTRAP DEPENDENCIES -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-		<!-- BAFFLE.JS -->
-		<script type="text/javascript" src="js/baffle.min.js"></script>
-		<!-- TILT.JS -->
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
-		<!-- CUSTOM -->
-		<script type="text/javascript" src="js/projects.js"></script>
-	</body>
-	</html>
+	</div>
+	<!-- JQUERY -->
+	<script
+	src="https://code.jquery.com/jquery-3.4.1.min.js"
+	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+	crossorigin="anonymous"></script>
+	<!-- BOOTSTRAP DEPENDENCIES -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<!-- BAFFLE.JS -->
+	<script type="text/javascript" src="js/baffle.min.js"></script>
+	<!-- TILT.JS -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+	<!-- CUSTOM -->
+	<script type="text/javascript" src="js/projects.js"></script>
+</body>
+</html>
