--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,11 @@
 	</div>
 	<div id="projects-background"></div>
 	<div id="project-cat-nav" class="row d-sm-none d-md-flex text-center my-1">
-		<div class="col-3 project-category project-category-active">GAME DEV</div>
+		<!-- <div class="col-3 project-category project-category-active">GAME DEV</div>
 		<div class="col-3 project-category">WEB</div>
 		<div class="col-3 project-category">SOFTWARE</div>
-		<div class="col-3 project-category">OTHER</div>
+		<div class="col-3 project-category">OTHER</div> -->
+		<div class="col-3 mx-auto">GAME DEV</div>
 	</div>
 	<div id="game-dev-projects" class="container-fluid">
 		<div id="project-midnight" class="row mt-5 project-row">
@@ -54,14 +55,14 @@
 			<div class="col-md-6 col-sm-12 description-container container-fluid  text-sm-center text-md-left">
 				<div class="row">
 					<div class="col-12">
-						<h1 style="font-family: 'FreeSansOblique';">MIDNIGHT CROWN</h1>
+						<h1 style="font-family: 'FreeSansBoldOblique';">MIDNIGHT CROWN</h1>
 						<h5>STATUS: HIATUS</h5>
 						<h5>TIMEFRAME: 1 YEAR</h5>
 						<h5>DEC 2017 - JAN 2018</h5>
 					</div>
 				</div>
 				<div class="row">
-					<div id="project-description" class="col-6" >
+					<div id="project-description" class="col-12" >
 						<br>
 						<p class="text-left">A WIP 'aerospace' combat game with full flight and combat controls both in atmosphere and zero-g. A passion project I have been working on as the sole developer.</p>
 						<br>
@@ -79,6 +80,61 @@
 
 						<br>
 						<h5>BUILT WITH: Unity, C#, Blender, FMODStudio, Adobe Suite</h5>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="bottom-bar my-5 mx-auto"></div>
+		<div id="project-roasted" class="row project-row">
+			<div class="col-md-6 col-sm-12 description-container container-fluid  text-sm-center text-md-left">
+				<div class="row">
+					<div class="col-12">
+						<h1 style="font-family: 'FreeSansBoldOblique';">ROASTED</h1>
+						<h5>STATUS: COMPLETE</h5>
+						<h5>TIMEFRAME: 3 DAYS</h5>
+						<h5>GLOBAL GAME JAM '17</h5>
+					</div>
+				</div>
+				<div class="row">
+					<div id="project-description" class="col-12" >
+						<br>
+						<p class="text-left">Get your coffee beans and get ready for a last stand. You play as Joe, a barista, as an endless horde of angry hipsters make their way to your cafe. Defend yourself! A game made for Global Game Jam 2017 in 3 days.</p>
+						<br>
+						<h5>FEATURES</h5>
+						<ul>
+							<li>Fully playable experience!</li>
+							<li>Scaling difficulty as you survive more nights</li>
+							<li>Randomized loot drops</li>
+							<li>High scores</li>
+							<li>Super cute art</li>
+						</ul>
+
+						<h5>Wonderful Contributors:</h5>
+						<ul>
+							<li>Eden Ding - Programmer</li>
+							<li>Charmaine Lee - Programmer</li>
+							<li>Grahaeme Cowie - 2D Artist</li>
+						</ul>
+
+						<br>
+						<h5>BUILT WITH: Unity, C#, Adobe Suite</h5>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-sm-12 container-fluid">
+				<div class="row text-center">
+					<div class="col-12 text-center mx-auto">
+						<video width="100%" autoplay loop>
+							<source src="css/vid/roasted-trim.mp4" type="video/mp4">
+						</video>
+					</div>
+				</div>
+				<div class="row mt-3">
+					<div class="col-6 img-preview">
+						<img data-tilt class="tilt-js" width="100%" src="css/img/roasted/roasted-preview.png">
+					</div>
+					<div class="col-6 img-preview">
+						<img data-tilt class="tilt-js" width="100%" src="css/img/roasted/roasted-lose.png">
 					</div>
 				</div>
 			</div>
