Fixed resume not displaying

--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
 			</div>
 
 		</div>
-		<div id="resume-container" class="container-fluid text-center mt-3">
+		<div id="resume-container" class="container-fluid text-center mt-1">
 			<div class="row">
-				<div id="up-arrow" class="col-3 mb-4 text-center mx-auto">
+				<div id="up-arrow" class="col-3 mb-2 text-center mx-auto">
 					<img src="https://img.icons8.com/material-outlined/52/000000/login-rounded-up.png">
 				</div>
-
-				<iframe class="mx-auto" id="resume-frame" src="https://drive.google.com/viewerng/viewer?url=css/pdf/resume.pdf&embedded=true" width="95%" height="95%" frameborder="0"></iframe>
+				<iframe class="mx-auto" id="resume-frame" src="https://drive.google.com/viewerng/viewer?url=le-rich.github.io/css/pdf/resume.pdf&embedded=true" width="95%" height="875px" frameborder="0"></iframe>
 			</div>
 		</div>
 
