Fixed Sunseeker not displaying

--- a/projects.html
+++ b/projects.html
@@ -148,10 +148,10 @@
 						</div>
 						<div class="row mt-3">
 							<div class="col-6 img-preview">
-								<img data-tilt class="tilt-js" width="100%" src="css/img/ss/flavorSunseeker.png">
+								<img data-tilt class="tilt-js" width="100%" src="css/img/ss/flavorSunseeker.PNG">
 							</div>
 							<div class="col-6 img-preview">
-								<img data-tilt class="tilt-js" width="100%" src="css/img/ss/flavorSunseeker2.png">
+								<img data-tilt class="tilt-js" width="100%" src="css/img/ss/flavorSunseeker2.PNG">
 							</div>
 						</div>
 					</div>
