Fixed mobile responsiveness

--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Richard Le: Projects</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- FONTS -->
 	<link rel="stylesheet" type="text/css" href="css/fonts/VCR OSD Mono/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
