Fixed responsiveness on main page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				</div>
 			</div>
 			<div id="contact-row" class="row text-center">
-				<a href="https://github.com/le-rich" class="col-lg-2 col-sm-3 contact-link ml-auto">GITHUB</a>
-				<a href="https://www.linkedin.com/in/le-rich/" class="col-lg-2 col-sm-3 contact-link">LINKEDIN</a>
-				<a href="mailto:richardle1997@gmail.com" class="col-lg-2 col-sm-3 contact-link mr-auto">EMAIL</a>
+				<a href="https://github.com/le-rich" class="col-md-2 col-sm-3 contact-link ml-auto">GITHUB</a>
+				<a href="https://www.linkedin.com/in/le-rich/" class="col-md-2 col-sm-3 contact-link">LINKEDIN</a>
+				<a href="mailto:richardle1997@gmail.com" class="col-md-2 col-sm-3 contact-link mr-auto">EMAIL</a>
 			</div>
 
 			<div id="horiz-scroll-div" class="text-center mx-auto">
