--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Richard Le:  Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="prefetch" href="https://le-rich.github.io/projects">
+	<link rel="prefetch" href="css/vid">
+	<link rel="prefetch" href="css/img">
 	<!-- FONTS -->
 	<link rel="stylesheet" type="text/css" href="css/fonts/VCR OSD Mono/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
