--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Richard Le:  Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="prefetch" href="https://le-rich.github.io/projects">
-	<link rel="prefetch" href="css/vid/ecocity_trim.mp4">
-	<link rel="prefetch" href="css/vid/sunseeker.mp4">
-	<link rel="prefetch" href="css/vid/classified.mp4">
+	<link rel="preload" href="css/vid/ecocity_trim.mp4" as="video">
+	<link rel="preload" href="css/vid/sunseeker.mp4" as="video">
+	<link rel="preload" href="css/vid/classified.mp4" as="video">
 	<!-- FONTS -->
 	<link rel="stylesheet" type="text/css" href="css/fonts/VCR OSD Mono/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
