Added preloading to projects page instead of index

--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,18 @@
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" type="text/css" href="css/scrollbars.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+
+	<!-- PRELOADING -->
+	<link rel="preload" href="css/vid/ecocity_trim.mp4" as="video" type = "video/mp4">
+	<link rel="preload" href="css/vid/sunseeker.mp4" as="video" type = "video/mp4">
+	<link rel="preload" href="css/vid/classified.mp4" as="video" type = "video/mp4">
+	<link rel="preload" href="css/img/design/Industrial.png" as="image">
+	<link rel="preload" href="css/img/design/Residential.png" as="image">
+	<link rel="preload" href="css/img/design/commercial.png" as="image">
+	<link rel="preload" href="css/img/roasted/roasted-lose.png" as="image">
+	<link rel="preload" href="css/img/roasted/roasted-preview.png" as="image">
+	<link rel="preload" href="css/img/ss/flavorSunseeker.PNG" as="image">
+	<link rel="preload" href="css/img/ss/flavorSunseeker2.PNG" as="image">
 </head>
 <body style="overflow-x: hidden;">
 	<div id="intro-overlay">
