Added Canary project

--- a/projects.html
+++ b/projects.html
@@ -509,7 +509,78 @@
 				<div class="bottom-bar my-5 mx-auto"></div>
 			</div>
 			<div id="web-projects" class="col-3 container-fluid project-list">
+				<div id="project-canary" class="row project-row">
+					<div class="col-md-6 col-sm-12 container-fluid">
+						<div class="row text-center">
+							<div class="col-12 text-center mx-auto">
+								<video width="100%" autoplay loop>
+									<source src="css/vid/canary.mp4" type="video/mp4">
+								</video>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">CANARY</h1>
+								<h5>STATUS: COMPLETE</h5>
+								<h5>TIMEFRAME: 16 HOURS</h5>
+								<h5>JULY 2019</h5>
+								<h5>ANGELHACK 2019</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<h6>Angelhack 2019 Winner: Agora RTC Challenge</h6>
+								<br>
+								<p class="text-left">A medical app that connects users to local trained volunteers who provide first-aid emergency medication before first responders reach a site. Current medication targets are Epinepherine, Insulin, Naloxone and CPR service.</p>
+								<a href="https://github.com/le-rich/Canary-AH19" class="visible-link">Github Link</a>
+								<br>
+								<br>
+								<h5>Teammates:</h5>
+								<ul>
+									<li>Alexis C. Mendiola - Programmer, UI/UX</li>
+									<li>Yun Sangwook - Programmer</li>
+									<li>Erik Golke - Programmer</li>
+									<li>Aman Ahlwat - Programmer</li>
+								</ul>
+
+								<br>
+								<h5>BUILT WITH: AgoraRTC, Google Maps API, Google Cloud Platform, NodeJS</h5>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div id="project-guarden" class="row mt-5 project-row">
+					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">GREEN GUARDEN</h1>
+								<h5>STATUS: COMPLETE</h5>
+								<h5>TIMEFRAME: 2 MONTHS</h5>
+								<h5>FEB 2019 - APR 2019</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<p class="text-left">Create a garden, add plants, and be reminded when you need to water and pick them next! Taking care of your plants yields you XP for your profile.</p>
+								<a href="https://green-guarden.firebaseapp.com/" class="visible-link">Hosted Web App</a>
+								<br>
+								<a href="https://github.com/le-rich/GreenGuardenCOMP1930/" class="visible-link">Github Link</a>
+								<br>
+								<br>
+								<h5>Teamates:</h5>
+								<ul>
+									<li>Steven Hwang - Programmer</li>
+									<li>Dion Khodyat - Programmer</li>
+								</ul>
+								<br>
+								<h5>BUILT WITH: Google Firebase, HTML, CSS, JS</h5>
+							</div>
+						</div>
+					</div>
 					<div class="col-md-6 col-sm-12 container-fluid">
 						<div class="row text-center">
 							<div class="col-12 text-center mx-auto">
@@ -519,7 +590,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
+					<div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
 						<div class="row">
 							<div class="col-12">
 								<h1 style="font-family: 'FreeSansBoldOblique';">GREEN GUARDEN</h1>
@@ -549,7 +620,16 @@
 					</div>
 				</div>
 				<div class="bottom-bar my-5 mx-auto"></div>
-				<div id="project-sunseeker" class="row project-row">
+				<div id="project-arcade" class="row project-row">
+					<div class="col-md-6 col-sm-12 container-fluid">
+						<div class="row text-center">
+							<div class="col-12 text-center mx-auto">
+								<video width="100%" autoplay loop>
+									<source src="css/vid/arcade.mp4" type="video/mp4">
+								</video>
+							</div>
+						</div>
+					</div>
 					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
 						<div class="row">
 							<div class="col-12">
@@ -564,42 +644,6 @@
 								<br>
 								<p class="text-left">A simple proof of concept to practice database referencing, AJAX calls and responsive UI from a node client.
 								Fetch and display data for different arcade games.</p>
-								<a href="https://github.com/le-rich/1536ArcadeCabinet" class="visible-link">Github Link</a>
-								<br>
-								<br>
-								<h5>Teammates:</h5>
-								<ul>
-									<li>Ben H</li>
-								</ul>
-
-								<br>
-								<h5>BUILT WITH: Google Firebase, Node.js, HTML, CSS, JS</h5>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 container-fluid">
-						<div class="row text-center">
-							<div class="col-12 text-center mx-auto">
-								<video width="100%" autoplay loop>
-									<source src="css/vid/arcade.mp4" type="video/mp4">
-								</video>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
-						<div class="row">
-							<div class="col-12">
-								<h1 style="font-family: 'FreeSansBoldOblique';">1536 ARCADE</h1>
-								<h5>STATUS: COMPLETE</h5>
-								<h5>TIMEFRAME: 1 WEEK</h5>
-								<h5>APRIL 2019</h5>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-12 project-description" >
-								<br>
-								<p class="text-left">A simple proof of concept to practice database referencing and and AJAX calls from a node client.
-								Fetch and display data for different arcade games in a responsive and clean UI.</p>
 								<a href="https://github.com/le-rich/1536ArcadeCabinet" class="visible-link">Github Link</a>
 								<br>
 								<br>
