forgot underline for web page

--- a/projects-web.html
+++ b/projects-web.html
@@ -78,6 +78,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="bottom-bar my-5 mx-auto"></div>
 				<div id="project-guarden" class="row mt-5 project-row">
 					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
 						<div class="row">
