Added Google analytics tracking to project and home pages

--- a/projects-gd.html
+++ b/projects-gd.html
@@ -26,6 +26,16 @@
 	<link rel="preload" href="css/img/roasted/roasted-preview.png" as="image">
 	<link rel="preload" href="css/img/ss/flavorSunseeker.PNG" as="image">
 	<link rel="preload" href="css/img/ss/flavorSunseeker2.PNG" as="image">
+
+	<!-- GOOGLE ANALYTICS -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146801176-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-146801176-1');
+	</script>
 </head>
 <body style="overflow-x: hidden;">
 <!-- 	<div id="intro-overlay">
