--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+
+	<!-- GOOGLE ANALYTICS -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146801176-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-146801176-1');
+	</script>
 </head>
 <body style="overflow: hidden;">
 	<div id="background">
