--- a/projects-software.html
+++ b/projects-software.html
@@ -14,6 +14,16 @@
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" type="text/css" href="css/scrollbars.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+
+	<!-- GOOGLE ANALYTICS -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146801176-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-146801176-1');
+	</script>
 </head>
 <body style="overflow-x: hidden;">
 	<div id="projects-background"></div>
