Removed alcohol reference

--- a/projects-gd.html
+++ b/projects-gd.html
@@ -122,7 +122,7 @@
 								</ul>
 
 								<br>
-								<h5>BUILT WITH: Unity, C#, MySQL, PHP, Alcohol</h5>
+								<h5>BUILT WITH: Unity, C#, MySQL, PHP</h5>
 							</div>
 						</div>
 					</div>
