--- a/projects-web.html
+++ b/projects-web.html
@@ -45,6 +45,48 @@
 	<div id="project-super-container" class="container-fluid">
 		<div class="row">
 			<div id="web-projects" class="col-12 container-fluid project-list">
+				 <div id="project-vanidi" class="row mt-5 project-row">
+            <div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+              <div class="row">
+                <div class="col-12">
+                  <h1 style="font-family: 'FreeSansBoldOblique';">VANIDI</h1>
+                  <h5>STATUS: COMPLETE</h5>
+                  <h5>TIMEFRAME: 36 HOURS</h5>
+                  <h5>NOVEMBER 2019</h5>
+                  <h5>DECODE CONGESTION HACKATHON</h5>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 project-description" >
+                  <br>
+                  <p class="text-left">A comprehensive visual interface for City of Vancouver Workers to combine, filter and export data. Use a geographical cropping tool to export all data in selected areas. Export to xlsx, csv or ArcGIS supported file formats.</p>
+                  <a href="https://github.com/le-rich/Canary-AH19" class="visible-link">Github Link</a>
+                  <br>
+                  <br>
+                  <h5>Teammates:</h5>
+                  <ul>
+										<li>Lacie Turner - Programmer, UI/UX
+                    <li>Yogesh(Yogi) Verma - Programmer</li>
+                    <li>Arka Roy - Programmer</li>
+                    <li>Herbert Ma - Programmer</li>
+                    <li>Aman Ahlwat - Programmer</li>
+                 </ul> 
+                 <br>
+                 <h5>BUILT WITH: Google Maps API, OpenDataSoft, NodeJS, HTML, CSS, JS</h5>
+               </div>
+             </div>
+						</div>
+						<div class="col-md-6 col-sm-12 container-fluid">
+                <div class="row text-center">
+                  <div class="col-12 text-center mx-auto">
+                    <video width="100%" autoplay loop>
+                      <source src="css/vid/canary.mp4" type="video/mp4">
+                    </video>
+                  </div>
+                </div>
+              </div>	
+					 </div>
+        </div>
 				<div id="project-canary" class="row mt-5 project-row">
 					<div class="col-md-6 col-sm-12 container-fluid">
 						<div class="row text-center">
