Fixed web page description responsiveness, added VanIDI

--- a/projects-web.html
+++ b/projects-web.html
@@ -57,7 +57,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-12 project-description" >
+                <div class="col-12 project-description">
                   <br>
                   <p class="text-left">A comprehensive visual interface for City of Vancouver Workers to combine, filter and export data. Use a geographical cropping tool to export all data in selected areas. Export to xlsx, csv or ArcGIS supported file formats.</p>
                   <a href="https://github.com/le-rich/Canary-AH19" class="visible-link">Github Link</a>
@@ -65,28 +65,58 @@
                   <br>
                   <h5>Teammates:</h5>
                   <ul>
-										<li>Lacie Turner - Programmer, UI/UX
+										<li>Lacie Turner - Programmer, UI/UX</li>
                     <li>Yogesh(Yogi) Verma - Programmer</li>
                     <li>Arka Roy - Programmer</li>
                     <li>Herbert Ma - Programmer</li>
                     <li>Aman Ahlwat - Programmer</li>
-                 </ul> 
-                 <br>
-                 <h5>BUILT WITH: Google Maps API, OpenDataSoft, NodeJS, HTML, CSS, JS</h5>
-               </div>
-             </div>
-						</div>
-						<div class="col-md-6 col-sm-12 container-fluid">
+                 	</ul> 
+                 	<br>
+                 	<h5>BUILT WITH: Google Maps API, OpenDataSoft, NodeJS, HTML, CSS, JS</h5>
+                </div>
+              </div>
+            </div>
+							<div class="col-md-6 col-sm-12 container-fluid">
                 <div class="row text-center">
                   <div class="col-12 text-center mx-auto">
-                    <video width="100%" autoplay loop>
-                      <source src="css/vid/canary.mp4" type="video/mp4">
-                    </video>
+                    <img width="100%" height="auto" src="css/img/vanidi.png">
                   </div>
                 </div>
-              </div>	
-					 </div>
-        </div>
+	            </div>
+	          </div>	
+	          <div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
+							<div class="row">
+                <div class="col-12">
+                  <h1 style="font-family: 'FreeSansBoldOblique';">VANIDI</h1>
+                  <h5>STATUS: COMPLETE</h5>
+                  <h5>TIMEFRAME: 36 HOURS</h5>
+                  <h5>NOVEMBER 2019</h5>
+                  <h5>DECODE CONGESTION HACKATHON</h5>
+                </div>
+              </div>
+							<div class="row">
+								<div class="col-12 project-description" >
+									<br>
+                  <p class="text-left">A comprehensive visual interface for City of Vancouver Workers to combine, filter and export data. Use a geographical cropping tool to export all data in selected areas. Export to xlsx, csv or ArcGIS supported file formats.</p>
+                  <a href="https://github.com/le-rich/Canary-AH19" class="visible-link">Github Link</a>
+                  <br>
+                  <br>
+                  <h5>Teammates:</h5>
+                  <ul>
+										<li>Lacie Turner - Programmer, UI/UX</li>
+                    <li>Yogesh(Yogi) Verma - Programmer</li>
+                    <li>Arka Roy - Programmer</li>
+                    <li>Herbert Ma - Programmer</li>
+                    <li>Aman Ahlwat - Programmer</li>
+                 	</ul> 
+                 	<br>
+                 	<h5>BUILT WITH: Google Maps API, OpenDataSoft, NodeJS, HTML, CSS, JS</h5>
+								</div>
+							</div>
+						</div>
+	        </div>
+	      </div>
+	      <div class="bottom-bar my-5 mx-auto"></div>
 				<div id="project-canary" class="row mt-5 project-row">
 					<div class="col-md-6 col-sm-12 container-fluid">
 						<div class="row text-center">
@@ -97,7 +127,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
 						<div class="row">
 							<div class="col-12">
 								<h1 style="font-family: 'FreeSansBoldOblique';">CANARY</h1>
@@ -132,7 +162,7 @@
 				</div>
 				<div class="bottom-bar my-5 mx-auto"></div>
 				<div id="project-guarden" class="row mt-5 project-row">
-					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
+					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
 						<div class="row">
 							<div class="col-12">
 								<h1 style="font-family: 'FreeSansBoldOblique';">GREEN GUARDEN</h1>
@@ -209,7 +239,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
 						<div class="row">
 							<div class="col-12">
 								<h1 style="font-family: 'FreeSansBoldOblique';">1536 ARCADE</h1>
